--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
+    "materialize-css": "^1.0.0",
     "mysql": "^2.16.0"
   },
   "devDependencies": {
